[project]
name = "motion_tools"
version = "0.1.1"
description = "Scripts for humanoid motion retargetting"

[build-system] # this is to fix issue with pixi pip install on editable mode
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["motion_tools"]

[tool.hatch.build.targets.wheel.force-include]
"assets" = "assets"

[project.scripts]
visualize-pkl = "motion_tools.scripts.visualize_pkl:cli"
visualize-csv = "motion_tools.scripts.visualize_csv:cli"
